log
Fri, Mar 21, 2025 11:47:45 AM: 
 exercises.c | 15 ++++++++++++++-
 1 file changed, 14 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:18:10: error: implicit declaration of function 'push_back' [-Werror=implicit-function-declaration]
          push_back(listaTemp, elemento);
          ^~~~~~~~~
exercises.c: At top level:
exercises.c:57:7: error: redefinition of 'crea_lista'
 List* crea_lista() {
       ^~~~~~~~~~
exercises.c:10:7: note: previous definition of 'crea_lista' was here
 List* crea_lista()
       ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
3f6cb15
Fri, Mar 21, 2025 11:48:31 AM: 
In file included from test.c:5:0:
exercises.c: In function 'crea_lista':
exercises.c:18:10: error: implicit declaration of function 'push_back' [-Werror=implicit-function-declaration]
          push_back(listaTemp, elemento);
          ^~~~~~~~~
exercises.c: At top level:
exercises.c:57:7: error: redefinition of 'crea_lista'
 List* crea_lista() {
       ^~~~~~~~~~
exercises.c:10:7: note: previous definition of 'crea_lista' was here
 List* crea_lista()
       ^~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
4fe677d
